kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect7.kmt
/* $Id: 025_weaving_in_kermeta_aspect7.kmt,v 1.1 2007-09-10 08:35:13 cfaucher Exp $ */

// Type checking of kermeta weavinf

package weavinginvalidtest7;

require kermeta
require "025_weaving_in_kermeta_aspect7/025_weaving_in_kermeta_aspect7_baseClass.kmt"

using kermeta::standard

@aspect "true"
class C {


	property a : A // invalid, should fail because this is not a reference like it is defined in the base ...
        getter is do
           result := c
        end
        setter is do
            c := value
        end	
	attribute c : A
	attribute d : B

}

/* END OF FILE */